src/DataAnnotationTechDarkMode.user.css
/* ==UserStyle==
@name        Data Annotation Tech Dark Mode
@description A dark theme for Data Annotation Tech with custom font support.
@namespace   jorgeivanburgosaguilar
@version     202603050009
@homepageURL https://github.com/jorgeivanburgosaguilar/DataAnnotationTechDarkMode
@license     Unlicense
@author      Jorge Ivan Burgos Aguilar
@advanced dropdown font-choice "Font" {
  datdefault "DAT Default" <<<EOT
  -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" EOT;
  intelonemonomedium "Intel One Mono Medium" <<<EOT
  "IntoneMono NF Medium", "Intel One Mono Medium", monospace EOT;
  custom "Custom" <<<EOT
  var(--datdm-font-custom) EOT;
}
@advanced text font-custom "Custom Font" Consolas, monospace
@advanced dropdown show-money "Show Money Widget" {
  money-yes "Yes" <<<EOT
  flex EOT;
  money-no "No" <<<EOT
  none EOT;
}
@advanced dropdown show-help-button "Show Help Button Widget" {
  help-button-yes "Yes" <<<EOT
  block EOT;
  help-button-no "No" <<<EOT
  none EOT;
}
/* ... */

